# InstanaResearch

./: README.md
ModelTraining/: dataset.py  metadata.py  training.py
ToolSource/: pyproject.toml
ToolSource/src/aioptim/cli/: main.py
ToolSource/src/aioptim/config/: prompt.yml
ToolSource/src/aioptim/services/: AIclassifier.py  classifier.py  controller.py  generator.py  instana.py  parser.py  processor.py
ToolSource/src/aioptim/utils/: config.py  info.py  node.py  request.py  state.py
ToolSource/tests/cli/: test_main.py
ToolSource/tests/config/: test_config.yml
ToolSource/tests/services/: test_AIclassifier.py  test_classifier.py  test_controller.py  test_generator.py  test_instana.py  test_parser.py  test_processor.py
ToolSource/tests/utils/: test_config.py  test_info.py  test_node.py  test_request.py  test_state.py
